--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@snoculars/faunadb": "^2.10.1",
     "apollo-datasource-rest": "^0.3.2",
     "apollo-link-http": "^1.5.17",
+    "apollo-link-lazy": "^0.0.2",
     "apollo-server-cloudflare": "^2.4.8",
     "bcryptjs": "^2.4.3",
     "graphql": "^14.2.1",
