--- a/src/settings/app.json
+++ b/src/settings/app.json
@@ -5,7 +5,7 @@
     "HOST": "localhost",
     "PORT": 3000,
     "GRAPHQL": "/",
-    "GRAPHIQL": "/___graphql",
+    "GRAPHIQL": "___/graphql",
     "PAYLOAD": {
       "JSON": {
         "LIMIT": "50mb"
