--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-datasource-rest": "^0.3.2",
     "apollo-link-http": "^1.5.17",
     "apollo-server-cloudflare": "^2.15.1",
+    "await-to-js": "^2.1.1",
     "graphql": "^14.2.1",
     "graphql-extensions": "^0.10.7",
     "graphql-fields": "^2.0.3",
