--- a/package.json
+++ b/package.json
@@ -10,17 +10,15 @@
   },
   "dependencies": {
     "@okgrow/graphql-scalars": "^0.4.6",
-    "@snoculars/faunadb": "^2.10.1",
     "apollo-datasource-rest": "^0.3.2",
     "apollo-link-http": "^1.5.17",
     "apollo-server-cloudflare": "^2.15.1",
     "await-to-js": "^2.1.1",
+    "faunadb": "^2.14.2",
     "graphql": "^14.2.1",
-    "graphql-fields": "^2.0.3",
     "graphql-input-number": "^0.0.10",
     "graphql-input-string": "^0.0.16",
     "graphql-middleware": "^4.0.2",
-    "graphql-request": "^1.8.2",
     "graphql-type-json": "^0.3.1",
     "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.7.3"
@@ -28,6 +26,7 @@
   "license": "MIT",
   "main": "src/index.js",
   "devDependencies": {
-    "web-streams-polyfill": "^2.0.6"
+    "web-streams-polyfill": "^2.0.6",
+    "webpack": "^4.43.0"
   }
 }
