--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "graphql-middleware": "^4.0.2",
     "graphql-type-json": "^0.3.1",
     "jsonwebtoken": "^8.5.1",
-    "merge-graphql-schemas": "^1.7.3"
+    "merge-graphql-schemas": "^1.7.3",
+    "random-seed-generator": "^0.0.7"
   },
   "license": "MIT",
   "main": "src/index.js",
